# pomodoro

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  notifications.rs  timer.rs  tray.rs
src/components/: Controls.tsx  ProgressRing.tsx  Settings.tsx
src/stores/: useStore.ts
